--- a/css/style.css
+++ b/css/style.css
@@ -118,23 +118,84 @@ box-shadow: 0 2px 3px 0 rgba(0,0,0,0.24), 0 2px 5px 0 rgba(0,0,0,0.19);
   border: none;
 }
 
+.buttons {
+  text-align: center;
+  color: #3c4043;
+  font-size: 14px;
+  margin-top: 18px;
+}
+
+.googlesearch:hover {
+  box-shadow: 0 1px 1px rgb(0 0 0 / 10%);
+  background-color: #f8f9fa;
+  border: 1px solid #dadce0;
+  color: #202124;
+}
+
 .googlesearch {
   margin: 11px 4px;
   padding: 0 16px;
   line-height: 27px;
   min-width: 54px;
+  height: 36px;
   text-align: center;
   cursor: pointer;
   user-select: none;
+  font-size: 14px;
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #f8f9fa;
+  color: #3c4043;
+  border: 1px solid #f2f2f2;
+  border-top-color: rgb(248, 249, 250);
+  border-top-style: solid;
+  border-top-width: 1px;
+  border-right-color: rgb(248, 249, 250);
+  border-right-style: solid;
+  border-right-width: 1px;
+  border-bottom-color: rgb(248, 249, 250);
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  border-left-color: rgb(248, 249, 250);
+  border-left-style: solid;
+  border-left-width: 1px;
+  border-radius: 4px;
+}
+
+.feelinglucky:hover {
+  box-shadow: 0 1px 1px rgb(0 0 0 / 10%);
+  background-color: #f8f9fa;
+  border: 1px solid #dadce0;
+  color: #202124;
 }
 
 .feelinglucky {
   padding: 0 16px;
   line-height: 27px;
   min-width: 54px;
+  margin: 11px 4px;
+  height: 36px;
+  background-color: #f8f9fa;
   text-align: center;
   cursor: pointer;
   user-select: none;
+  font-size: 14px;
+  font-family: Arial, Helvetica, sans-serif;
+  border-radius: 4px;
+  color: #3c4043;
+  border: 1px solid #f8f9fa;
+  border-top-color: rgb(248, 249, 250);
+  border-top-style: solid;
+  border-top-width: 1px;
+  border-right-color: rgb(248, 249, 250);
+  border-right-style: solid;
+  border-right-width: 1px;
+  border-bottom-color: rgb(248, 249, 250);
+  border-bottom-style: solid;
+  border-bottom-width: 1px;
+  border-left-color: rgb(248, 249, 250);
+  border-left-style: solid;
+  border-left-width: 1px;
+  
 }
 
 .footer {
@@ -148,6 +209,7 @@ box-shadow: 0 2px 3px 0 rgba(0,0,0,0.24), 0 2px 5px 0 rgba(0,0,0,0.19);
   width: 100%;
   margin-left: -8px;
   line-height: 10px;
+  background-color: #f2f2f2;
 }
 
 .footerli {
